--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": "12.x"
+    "node": "17.3.0"
+    "npm": "8.3.0"
   },
   "author": "Hugo me come el huevo",
   "license": "MIT",
