--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,9 @@
 {
-    "token": "OTYzMjMzMDA0NjczNzA4MDcy.YlTGpA.ONnvoA3UE4yGGy3bMpOSTzFj894",
+    "token": "TU TOKEN",
     "prefix": ".",
 
-    "ownerid": "539792772090167296",
-    "logschannel": "963232669146165308",
+    "ownerid": "ID",
+    "logschannel": "ID DEL LOGS",
 
     "goodemoji": ":thumbsup:",
     "bademoji": ":x:"
